changed base64 encoder, added setmaxtime to submitecl so asynchronous runs can run